--- a/var/www/html/torrentwatch-xa/index.html
+++ b/var/www/html/torrentwatch-xa/index.html
@@ -33,37 +33,33 @@
                 </li>
                 <li id="favoritesMenu">
                     <a class="toggleDialog" href="#favorites">
-                        <span class="icon"></span>
+                        <!--<span class="icon"></span>-->
                         Favorites</a>
                 </li>
                 <li id="config">
                     <a class="toggleDialog" href="#configuration">
-                        <span class="icon"></span>
+                        <!--<span class="icon"></span>-->
                         Configure</a>
                 </li>
                 <li id="view">
                     <a class="toggleDialog" href="#history">
-                        <span class="icon"></span>
+                        <!--<span class="icon"></span>-->
                         History</a>
                 </li>
                 <li id="empty">
                     <a class="toggleDialog" href="#clear_cache">
-                        <span class="icon"></span>
+                        <!--<span class="icon"></span>-->
                         Empty Cache</a>
                 </li>
                 <li id="legend">
                     <a class='toggleDialog' href='#show_legend'>
-                        <span class="icon"></span>
+                        <!--<span class="icon"></span>-->
                         Legend</a>
                 </li>
-                <!--<li id="report">
-                    <a class='toggleDialog' href='#report_bug'>
-                        <span class="icon"></span>
-                        Report Bug</a>
-                </li>-->
                 <li id="webui">
                     <a class='toggleDialog' href='#show_transmission'>
                         <span class="icon"></span>
+                        <span id="webui">Transmission</span>
                     </a>
                 </li>
             </ul>
