--- a/var/www/html/torrentwatch-xa/index.html
+++ b/var/www/html/torrentwatch-xa/index.html
@@ -16,10 +16,11 @@
         <!--[if IE]>
           <link rel="Stylesheet" type="text/css" href="css/ie.css"></link>
         <![endif]-->
-        <script type="text/javascript" src="javascript/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="javascript/jquery-1.12.4.min.js"></script>
+        <!--<script type="text/javascript" src="javascript/jquery-migrate-1.4.1.js"></script>-->
         <script type="text/javascript" src="javascript/jquery.tinysort.min.js"></script>
         <script type="text/javascript" src="javascript/jquery.cookie.js"></script>
-        <script type="text/javascript" src="javascript/jquery.form.js"></script>
+        <script type="text/javascript" src="javascript/jquery.form.min.js"></script>
         <script type="text/javascript" src="javascript/json2.js"></script>
         <script type="text/javascript" src="javascript/torrentwatch-xa.js"></script>
 
