--- a/var/www/html/torrentwatch-xa/index.html
+++ b/var/www/html/torrentwatch-xa/index.html
@@ -27,9 +27,9 @@
     </head>
     <body>
         <div id="topmenu">
-            <ul class="mainoptions" id="mainoptions">
+            <ul id="mainoptions">
                 <li id="torrentwatch-xaLogo">
-                    <img id="topLogo" src="images/torrentwatch-xa-logo22.png" alt="torrentwatch-xa logo" />
+                    <img id="twxaLogo" src="images/torrentwatch-xa-logo22.png" alt="torrentwatch-xa logo" />
                     torrentwatch-xa
                 </li>
                 <li id="favoritesMenu">
@@ -60,8 +60,8 @@
                 <li id="webui">
                     <a class='toggleDialog' href='#show_transmission'>
                         <span class="icon"></span>
-                        <span id="webui">Transmission</span>
-                    </a>
+                        <span id="webuiLabel">Transmission</span>
+                        </a>
                 </li>
             </ul>
             <ul id="filterbar_container">
