--- a/var/www/html/torrentwatch-xa/index.html
+++ b/var/www/html/torrentwatch-xa/index.html
@@ -51,7 +51,6 @@
         <script type="text/javascript" src="javascript/jquery-3.3.1.min.js"></script>
         <!--<script type="text/javascript" src="javascript/jquery-migrate-3.0.1.js"></script>-->
         <script type="text/javascript" src="javascript/jquery.tinysort.min.js"></script>
-        <!--<script type="text/javascript" src="javascript/tinysort.min.js"></script>-->
         <script type="text/javascript" src="javascript/jquery.cookie.js"></script>
         <script type="text/javascript" src="javascript/jquery.form.min.js"></script>
         <script type="text/javascript" src="javascript/torrentwatch-xa.js"></script>
@@ -65,29 +64,19 @@
                     torrentwatch-xa
                 </li>
                 <li id="favoritesMenu">
-                    <a class="toggleDialog" href="#favorites">
-                        <!--<span class="icon"></span>-->
-                        Favorites</a>
+                    <a class="toggleDialog" href="#favorites">Favorites</a>
                 </li>
                 <li id="config">
-                    <a class="toggleDialog" href="#configuration">
-                        <!--<span class="icon"></span>-->
-                        Configure</a>
+                    <a class="toggleDialog" href="#configuration">Configure</a>
                 </li>
                 <li id="view">
-                    <a class="toggleDialog" href="#history">
-                        <!--<span class="icon"></span>-->
-                        History</a>
+                    <a class="toggleDialog" href="#history">History</a>
                 </li>
                 <li id="empty">
-                    <a class="toggleDialog" href="#clear_cache">
-                        <!--<span class="icon"></span>-->
-                        Empty Cache</a>
+                    <a class="toggleDialog" href="#clear_cache">Empty Cache</a>
                 </li>
                 <li id="legend">
-                    <a class='toggleDialog' href='#show_legend'>
-                        <!--<span class="icon"></span>-->
-                        Legend</a>
+                    <a class='toggleDialog' href='#show_legend'>Legend</a>
                 </li>
                 <li id="webui">
                     <a class='toggleDialog' href='#show_transmission'>
