--- a/var/www/html/torrentwatch-xa/index.html
+++ b/var/www/html/torrentwatch-xa/index.html
@@ -43,18 +43,20 @@
 
         <link rel="stylesheet" type="text/css" href="css/reset.css" />
         <link rel="stylesheet" href="css/torrentwatch-xa.css" type="text/css"  />
-        <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 1024px) and (device-aspect-ration: 4/3, device-aspect-ratio: 16/10, device-aspect-ratio: 16/9) and (orientation: portrait)" href="css/tablet.css" type="text/css" />
+        <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 1024px) and (device-aspect-ratio: 4/3, device-aspect-ratio: 16/10, device-aspect-ratio: 16/9) and (orientation: portrait)" href="css/tablet.css" type="text/css" />
         <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 640px)" href="css/phone.css" type="text/css" />
         <!--[if IE]>
           <link rel="Stylesheet" type="text/css" href="css/ie.css"></link>
         <![endif]-->
-        <script type="text/javascript" src="javascript/jquery-3.3.1.min.js"></script>
-        <!--<script type="text/javascript" src="javascript/jquery-migrate-3.0.1.js"></script>-->
+        <script type="text/javascript" src="javascript/jquery-3.5.1.min.js"></script>
+        <!--<script type="text/javascript" src="javascript/jquery-migrate-3.3.1.min.js"></script>-->
         <script type="text/javascript" src="javascript/jquery.tinysort.min.js"></script>
-        <script type="text/javascript" src="javascript/jquery.cookie.js"></script>
+        <script type="text/javascript" src="javascript/js.cookie-2.2.1.min.js"></script>
         <script type="text/javascript" src="javascript/jquery.form.min.js"></script>
+        <script type="text/javascript" src="javascript/twxa_utility_functions.js"></script>
         <script type="text/javascript" src="javascript/torrentwatch-xa.js"></script>
-
+        <script type="text/javascript" src="javascript/twxa_ui_functions.js"></script>
+        <script type="text/javascript" src="javascript/twxa_event_bindings.js"></script>
     </head>
     <body>
         <div id="topmenu">
