--- a/var/www/html/torrentwatch-xa/index.html
+++ b/var/www/html/torrentwatch-xa/index.html
@@ -45,8 +45,11 @@
                     <img id="twxaLogo" src="images/torrentwatch-xa-logo22@2x.png" alt="torrentwatch-xa logo" width="22" height="22"/>
                     torrentwatch-xa
                 </li>
-                <li id="favoritesMenu">
+                <li id="favoritesDialogButton">
                     <a class="toggleDialog" href="#favorites">Favorites</a>
+                </li>
+                <li id="superfavoritesDialogButton">
+                    <a class="toggleDialog" href="#superfavorites">Super-Favorites</a>
                 </li>
                 <li id="config">
                     <a class="toggleDialog" href="#configuration">Configure</a>
